--- a/practica03/index.html
+++ b/practica03/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-<section class="titulo">
+<section id="titulo">
     <h1>LISTA ALEATORIA DE USUARIOS</h1>
 </section>
-<section class="pag">
+<section id="pag">
     <button>Hazlo!</button>
 </section>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/acciones.js"></script>
 </body>
 </html>
