--- a/practica03/index.html
+++ b/practica03/index.html
@@ -11,6 +11,11 @@
 </section>
 <section id="pag">
     <button>Hazlo!</button>
+    <div class="fila">
+        <p>Nombre Apellido1 Apellido2</p>
+        <p>Domicilio</p>
+        <p>C.Postal</p>
+    </div>
 </section>
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/acciones.js"></script>
